syntax = "proto3";
package TiebaDesktop;

import "proto/CommonReq.proto";

message DataReq_GetUserBlackInfo {
    CommonReq common = 1;
    int64 black_uid = 2;
}

message GetUserBlackInfoReqIdl {
    DataReq_GetUserBlackInfo data = 1;
}
